# uberchess_nn

./: README.md
book/: book.toml
book/book/: 404.html  benchmarks.html  bitboards.html  build.html  eval_classic.html  factorized_halfkp.html  index.html  makemove.html  move_encoding.html  movegen.html  nnue_inference.html  overview.html  perft.html  position.html  print.html  quiescence.html  search.html  searcher-c2a407aa.js  searchindex-131d7bfa.js  searchindex-a5d2656c.js  testing.html  toc-eec0f32e.js  toc.html  training_pipeline.html  zobrist.html
book/src/: SUMMARY.md  benchmarks.md  bitboards.md  build.md  eval_classic.md  factorized_halfkp.md  makemove.md  move_encoding.md  movegen.md  nnue_inference.md  overview.md  perft.md  position.md  quiescence.md  search.md  testing.md  training_pipeline.md  zobrist.md
engine/: CMakeLists.txt
engine/bench/: bench_eval.c  bench_nps.c  bench_tt.c
engine/include/: bitboard.h  eval.h  makemove.h  move.h  movegen.h  nnue.h  pos.h  search.h  telemetry.h  tt.h  types.h  uci.h  zobrist.h
engine/src/: bitboard.c  eval_classic.c  main.c  makemove.c  move.c  movegen.c  nnue.c  pos.c  search.c  telemetry.c  tt.c  uci.c  zobrist.c
engine/tests/: perft_suite.txt  test_perft.c  test_search.c  test_unit.c
train/: README.md  dataset.py  export_weights.py  label.py  model.py  requirements.txt  train.py
